refactor(mesheryctl): rename pattern commands to design due to deprecation
Signed-off-by: devhindo <lildevhind@gmail.com>

--- a/docs/_releases/v0.5.18.md
+++ b/docs/_releases/v0.5.18.md
@@ -51,7 +51,7 @@ tag: v0.5.18
 - Fix Release Notes Drafter @ramrodo (#3055)
 
 ## 📖 Documentation
-- [Docs] mesheryctl pattern delete page added @amino19 (#3070)
+- [Docs] mesheryctl design delete page added @amino19 (#3070)
 - [Docs]Corrected error command in Quick Start Guide @sayantan1413 (#3071)
 - [Docs] Universally append @Patil2099 (#3081)
 - Open API Documentation #1 @piyushsingariya (#3012)
