--- a/docs/_releases/v0.5.38.md
+++ b/docs/_releases/v0.5.38.md
@@ -27,7 +27,7 @@ tag: v0.5.38
 - mesheryctl features @kumarabd (#3514)
 - fix broken dependency @killbotXD (#3526)
 - creating issue/remind label text @Anita-ihuman (#3523)
-- [mesheryctl] `mesheryctl pattern apply -f <github-url>` @piyushsingariya (#3489)
+- [mesheryctl] `mesheryctl design apply -f <github-url>` @piyushsingariya (#3489)
 - Add icon dependencies for remote provider  @sudo-NithishKarthik (#3519)
 - [UI]add duplicate button @killbotXD (#3524)
 - [Fix]Re-enable support for patterns, filters and applications in local provider @utkarsh-pro (#3515)
