--- a/docs/_releases/v0.5.39.md
+++ b/docs/_releases/v0.5.39.md
@@ -11,7 +11,7 @@ tag: v0.5.39
 - Issue #3508/ added token command for CRUD operations @Revolyssup (#3522)
 - [UI] Filters: Action Enhancements @Chadha93 (#3638)
 - Add support for custom callback URL in meshery server @utkarsh-pro (#3544)
-- Fix mesheryctl pattern delete @utkarsh-pro (#3633)
+- Fix mesheryctl design delete @utkarsh-pro (#3633)
 - Error2/debjani1413 @kumarabd (#3609)
 - Kumarabd/feature/ci @kumarabd (#3603)
 - [UI] Changed labels on settings button @sayantan1413 (#3579)
