--- a/docs/_releases/v0.6.19.md
+++ b/docs/_releases/v0.6.19.md
@@ -17,7 +17,7 @@ language: en
 
 ## ⌨️ Meshery CLI
 
-- [mesheryctl] improve the error messages shown to users for "mesheryctl pattern" @legendarykamal (#6323)
+- [mesheryctl] improve the error messages shown to users for "mesheryctl design" @legendarykamal (#6323)
 
 ## 🖥 Meshery UI
 
