--- a/docs/_releases/v0.6.48.md
+++ b/docs/_releases/v0.6.48.md
@@ -11,7 +11,7 @@ language: en
 
 ## ⌨️ Meshery CLI
 
-- improve debug logs for the `mesheryctl pattern apply` cmd @ayushthe1 (#6935)
+- improve debug logs for the `mesheryctl design apply` cmd @ayushthe1 (#6935)
 - error messages for mesheryctl system and mesheryctl system token improved @deepakdinesh1123 (#6955)
 
 ## 🖥 Meshery UI
