--- a/docs/_releases/v0.7.80.md
+++ b/docs/_releases/v0.7.80.md
@@ -12,7 +12,7 @@ tag: v0.7.80
 
 ## ⌨️ Meshery CLI
 
-- [mesheryctl] consistent mesheryctl pattern list @dusdjhyeon (#11264)
+- [mesheryctl] consistent mesheryctl design list @dusdjhyeon (#11264)
 - fix concurent write error w/signoff @Jougan-0 (#11361)
 - [Feat] `mesheryctl model export` command @humblenginr (#11338)
 - [Mesheryctl] `model import` command @Jougan-0 (#11332)
@@ -37,7 +37,7 @@ tag: v0.7.80
 
 ## 📖 Documentation
 
-- [mesheryctl] consistent mesheryctl pattern list @dusdjhyeon (#11264)
+- [mesheryctl] consistent mesheryctl design list @dusdjhyeon (#11264)
 - Spelling Mistakes Correction @ENUMERA8OR (#11347)
 - [Mesheryctl] `model import` command @Jougan-0 (#11332)
 - docs: added NPM_TOKEN details under secrets section @surajgjadhav (#11350)
