Revert changes in docs/_releases from the latest commit
Signed-off-by: devhindo <lildevhind@gmail.com>

--- a/docs/_releases/v0.5.43.md
+++ b/docs/_releases/v0.5.43.md
@@ -27,7 +27,7 @@ tag: v0.5.43
 
 ## 🧰 Maintenance
 
-- [mesheryctl] Tests for `mesheryctl design` commands @piyushsingariya (#3714)
+- [mesheryctl] Tests for `mesheryctl pattern` commands @piyushsingariya (#3714)
 - [CI] use access token in release notes publisher @DelusionalOptimist (#3777)
 
 ## 📖 Documentation
