--- a/docs/_releases/v0.6.4.md
+++ b/docs/_releases/v0.6.4.md
@@ -17,7 +17,7 @@ language: en
 
 ## ⌨️ Meshery CLI
 
-- chore(mesheryctl): add loader to mesheryctl design apply @pk-218 (#6079)
+- chore(mesheryctl): add loader to mesheryctl pattern apply @pk-218 (#6079)
 - fix(ci): update `docker-compose.yaml` path @pk-218 (#6111)
 - fix(ci/lint): fix failing lint check @pk-218 (#6113)
 
